--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,35 +1,37 @@
 name: sisyphus
 description: "A new Flutter project."
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.5.3
 
-
 dependencies:
+  bloc: ^8.1.4
   candlesticks: ^2.1.0
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.14
   get_it: ^8.0.2
   injectable: ^2.5.0
-  toastification: ^2.0.0 
+  toastification: ^2.0.0
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  build_runner: ^2.4.13
   injectable_generator: ^2.6.2
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/images/
     - assets/fonts/
@@ -58,4 +60,3 @@ flutter:
         - asset: assets/fonts/Satoshi-BlackItalic.otf
           style: italic
           weight: 700
-  
