--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_it: ^8.0.2
   injectable: ^2.5.0
   toastification: ^2.0.0
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   build_runner: ^2.4.13
